--- a/style.css
+++ b/style.css
@@ -314,9 +314,19 @@ hr{
     color: #333333;
     padding: 40px 0;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px; /* Espacio entre los cuadros */
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin: 0 20px; 
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
+
+@media (max-width: 768px) {
+    .testimonials-section {
+        grid-template-columns: 1fr;
+    }
+}
+
 
 .testimonial {
     text-align: center;
